[tool.poetry]
name = "imageapi"
version = "0.1.0"
description = ""
authors = ["Dennis Vink <dennis.vink@xebia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
gunicorn = "^21.2.0"
google-cloud = "^0.34.0"
google-cloud-aiplatform = "^1.33.0"
google-cloud-bigquery = "^3.11.4"
google-cloud-core = "^2.3.3"
google-cloud-firestore = "^2.12.0"
google-cloud-pubsub = "^2.18.4"
google-cloud-resource-manager = "^1.10.4"
google-cloud-storage = "^2.11.0"
vertexai = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
